--- a/contributors/NSM_Example/methods.ipynb
+++ b/contributors/NSM_Example/methods.ipynb
@@ -49,22 +49,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## GeoWeaver\n",
-    "\n",
-    "\n",
-    "The model has been adapted to the open-source workflow management sytem, [GeoWeaver](https://github.com/ESIPFed/Geoweaver). Geoweaver is a web-based application for interactive, full-stack machine leanring workflow management. The app provdies a user-friendly GUI to interact with and persistently store script logs and code revision histories. Shell and python scripts are supported by the platform, as well as seammless intergration wth Jupyter. \n",
-    "\n",
-    "A detailed overview of the use of the model within Geoweaver is provided in  Chapter 7. [Workflow Management and Cloud Computing](./workflow.ipynb)\n",
-    "\n",
-    "\n",
-    "\n",
-    "<img align = 'center' src=\"./Images/GeoWeaver.JPG\" alt = 'drawing' width = '500'/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Machine Learning Models\n",
     "There are many different types of machine learning models for differnt applications, such as classification, regression, and clustering.\n",
     "For the application of predicting 1-km gridded SWE, a regression model is the best approach.\n",
@@ -106,8 +90,15 @@
     "\n",
     "\n",
     "Now that we have a general understanding of the model framework, lets dig into a model example for the Sierra Nevada region.\n",
-    "[Model Development](./training.ipynb)\n"
+    "[Model Setup](./training.ipynb)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -133,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.8"
   },
   "vscode": {
    "interpreter": {
