update folder structure

--- a/workbook/NSM_Example/Hindcast_Evaluation.ipynb
+++ b/workbook/NSM_Example/Hindcast_Evaluation.ipynb
@@ -695,16 +695,14 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
+    "from scripts import SSWEET, Hindcast_Initialization\n",
     "import warnings\n",
-    "import SSWEET\n",
-    "import Hindcast_Initialization\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "#Set working directories\n",
     "cwd = os.getcwd()\n",
-    "os.chdir(\"..\")\n",
-    "os.chdir(\"..\")\n",
+    "os.chdir(\"../..\")\n",
     "datapath = os.getcwd() "
    ]
   },
@@ -11230,9 +11228,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NSM_env",
+   "display_name": "notebook",
    "language": "python",
-   "name": "nsm_env"
+   "name": "notebook"
   },
   "language_info": {
    "codemirror_mode": {
@@ -11244,7 +11242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
