--- a/workbook/NSM_Example/SSM_Hindcast_2019.ipynb
+++ b/workbook/NSM_Example/SSM_Hindcast_2019.ipynb
@@ -304,7 +304,7 @@
    "source": [
     "#run the model through all time (data acqusition already completed)\n",
     "for day in datelist:\n",
-    "    print('Updating SWE predictions for ', day)\n",
+    "    print('Updating SWE estimates for ', day)\n",
     "    #connect interactive script to Wasatch Snow module\n",
     "    Snow = NSM_SCA.NSM_SCA(cwd, datapath, day, threshold=threshold, Regions = Region_list, modeltype = modeltype)\n",
     "    \n",
