--- a/workbook/NSM_Example/Hindcast_Evaluation.ipynb
+++ b/workbook/NSM_Example/Hindcast_Evaluation.ipynb
@@ -11212,11 +11212,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Applying the Model\n",
+    "\n",
+    "Now that we have a trained and validated model, we can apply it to estimate SWE at other locations. This can be accomplished in the [Run Simulation](./extrapolation/Model/Run_simulation.ipynb) notebook."
+   ]
   },
   {
    "cell_type": "code",
